--- a/style/_base.scss
+++ b/style/_base.scss
@@ -4,8 +4,11 @@
     padding: 0;
 }
 html {
+    overflow-x: 0;
     scroll-behavior: smooth;
     body {
+        position: relative;
+        overflow-x: 0;
         ul {
             list-style-type: none;
             li {
