--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -413,7 +413,7 @@ body {
             }
             .glider-contain {
                 .glider {
-                    margin: 0 1rem;
+                    margin: 0 2rem;
                     li {
                         margin-right: 1rem;
                         &:last-child {
